# CortexM4CompilerV2

./: CMakeLists.txt  compile.bat
src/: main.c
src/backend/registerAllocator/: allocator.c  allocator.h
src/frontend/lexer/: tokenizer.c  tokenizer.h
src/frontend/parser/: 3opIrGen.c  3opIrGen.h  astGen.c  astGen.h
src/helper/: arenaAlloc.c  arenaAlloc.h  filereader.c  filereader.h
